:art: add clinic update code to AdminController
the code was moved from ClinicController